--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ionic/react": "^8.7.10",
+    "ionicons": "^8.0.13",
     "jotai": "^2.15.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
