--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@ionic/react": "^8.7.10",
     "ionicons": "^8.0.13",
     "jotai": "^2.15.1",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "leaflet": "^1.9.4",
+    "react": "^19.0.0-rc.1",
+    "react-dom": "^19.0.0-rc.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
