--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,22 @@ services:
     networks:
       - app-network
 
+  database:
+    image: postgres:16-alpine
+    restart: always
+    shm_size: 128mb
+    environment:
+      POSTGRES_USER: matcha_user
+      POSTGRES_PASSWORD: matcha_password
+      POSTGRES_DB: matcha_db
+      # POSTGRES_USER: ${POSTGRES_USER}
+      # POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      # POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432" # can consider not exposing this port
+    networks:
+      - app-network
+
 networks:
   app-network:
     driver: bridge
