--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "watch": "tsc -w",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "seed": "ts-node src/database/seed.ts"
   },
   "keywords": [
     "dating",
@@ -46,4 +47,5 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
+
 }
