--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
 # Server Configuration
 NODE_ENV=development
-PORT=5000
+PORT=5001
 
 # Database Configuration
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=matcha_db
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+POSTGRES_HOST=database
+POSTGRES_PORT=5432
+POSTGRES_DB=matcha_db
+POSTGRES_USER=matcha_user
+POSTGRES_PASSWORD=matcha_password
 
 # JWT Secret (generate a strong random string)
 JWT_SECRET=your_jwt_secret_key_here_change_this_in_production
@@ -21,7 +21,7 @@ EMAIL_PASSWORD=your_app_specific_password
 EMAIL_FROM=noreply@matcha.com
 
 # Frontend URL (for CORS and email links)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:5001
 
 # File Upload
 MAX_FILE_SIZE=5242880
