--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,26 +10,35 @@ services:
   backend:
     build:
       context: ./backend
+    env_file:
+      - .env
     ports:
       - "5001:5001"
     networks:
       - app-network
+    depends_on:
+      database:
+        condition: service_healthy
 
   database:
     image: postgres:16-alpine
     restart: always
     shm_size: 128mb
-    environment:
-      POSTGRES_USER: matcha_user
-      POSTGRES_PASSWORD: matcha_password
-      POSTGRES_DB: matcha_db
-      # POSTGRES_USER: ${POSTGRES_USER}
-      # POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      # POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
     ports:
       - "5432:5432" # can consider not exposing this port
     networks:
       - app-network
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U matcha_user -d matcha_db -h 127.0.0.1 -p 5432",
+        ]
+      interval: 2s
+      timeout: 3s
+      retries: 30
 
 networks:
   app-network:
