--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ services:
   frontend:
     build:
       context: ./frontend
+      args:
+        VITE_API_URL: http://localhost:5001
     ports:
-      - "3000:80"
+      - "5173:80"
     networks:
       - app-network
 
