complete reset password flow

--- a/bruno-api/package.json
+++ b/bruno-api/package.json
@@ -5,6 +5,6 @@
     "@usebruno/cli": "^3.0.3"
   },
   "scripts": {
-    "test": "bru run . -r --tests-only"
+    "test": "bru run . -r --tests-only --env matcha"
   }
 }
