--- a/backend/package.json
+++ b/backend/package.json
@@ -31,7 +31,8 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "pg": "^8.17.1",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -47,5 +48,4 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
-
 }
